Fixed issue: The scrollback arrow does not take you all the way to the top
Invisible hr tag created to scroll to when clicking the toTopButton

--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,6 @@
 #header
 {
+    z-index: 2;
     position: sticky;
     display: flex;
     flex-direction: row;
